fix page jumping to top

--- a/apps/theme/components/Sidebar/Sidebar.module.css
+++ b/apps/theme/components/Sidebar/Sidebar.module.css
@@ -16,6 +16,17 @@
   flex-direction: column;
 }
 
+.tabContent {
+  flex: 1;
+  min-height: 0;
+}
+
+.tabPanel {
+  height: 100%;
+  overflow-y: auto;
+  padding: var(--ds-size-7);
+}
+
 .sidebar > div:first-child {
   display: flex;
   flex-direction: column;
@@ -33,37 +44,15 @@
 }
 
 .scrollContainer {
-  padding: 24px;
+  padding: var(--ds-size-7);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.error {
-  font-weight: 400;
-  font-size: 16px;
-  color: var(--ds-color-neutral-text-subtle);
-}
-
-.label {
-  font-size: 16px;
-  margin-bottom: 8px;
-}
-
-.themeMode {
-  margin-bottom: 24px;
-  margin-top: 24px;
-}
-
-.sizes {
-  display: flex;
-  gap: 8px;
-  margin-top: -4px;
-}
-
 .bottom {
   border-radius: 0 0 8px 8px;
-  padding: 24px;
+  padding: var(--ds-size-7);
   border-top: 1px solid var(--ds-color-neutral-border-subtle);
   background-color: var(--ds-color-neutral-background-default);
   flex-shrink: 0;
@@ -100,15 +89,4 @@
   .toggleOpen {
     right: 440px;
   }
-}
-
-.tabContent {
-  flex: 1;
-  min-height: 0;
-}
-
-.tabPanel {
-  height: 100%;
-  overflow-y: auto;
-  padding: 24px;
 }
